# gateway

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-mips  LICENSE  README.md  RELEASE.md  SKILL.md  config.json  config.jsonnet
common/: Cargo.toml
common/src/: lib.rs
common/src/chains/: mod.rs
gateway-framework/: Cargo.toml  build.rs
gateway-framework/src/: auth.rs  block_constraints.rs  blocks.rs  budgets.rs  chain.rs  chains.rs  config.rs  errors.rs  geoip.rs  graphql.rs  ip_blocker.rs  ipfs.rs  json.rs  lib.rs  logging.rs  metrics.rs  rate_limiter.rs  reports.rs
gateway-framework/src/auth/: api_keys.rs  common.rs  context.rs  mod.rs
gateway-framework/src/auth/methods/: api_keys.rs  common.rs  mod.rs  subscriptions.rs
gateway-framework/src/chains/: block_rate.rs  blockmeta.rs  ethereum.rs  mod.rs  test.rs
gateway-framework/src/chains/blockmeta/: rpc_client.rs  sf.blockmeta.v2.rs
gateway-framework/src/chains/ethereum/: json_rpc.rs  rpc_client.rs  sf_blockmeta_client.rs
gateway-framework/src/contract_abis/: ChainlinkPriceFeed.json
gateway-framework/src/gateway/http/: config.rs  gateway.rs  mod.rs
gateway-framework/src/http/: mod.rs
gateway-framework/src/http/middleware/: mod.rs  rate_limiter.rs  request_tracing.rs  require_auth.rs
gateway-framework/src/indexers/: status.rs
gateway-framework/src/network/: datasets.rs  discovery.rs  exchange_rate.rs  indexing_performance.rs  mod.rs  network_subgraph.rs
gateway-framework/src/reporting/: kafka.rs  logging.rs  metrics.rs  mod.rs
gateway-framework/src/scalar/: mod.rs  receipts.rs  vouchers.rs
gateway-framework/src/subscriptions/: mod.rs  subgraph.rs
gateway-framework/src/topology/: mod.rs  network.rs
gateway-framework/src/utils/: hashing.rs  mod.rs  testing.rs  tracing.rs
gateway-framework/tests/: it_chains_blockmeta.rs  it_chains_blockmeta_rpc.rs  it_chains_ethereum_rpc.rs  it_chains_ethereum_sf_blockmeta.rs
graph-gateway/: Cargo.toml  build.rs
graph-gateway/graphql/: api_keys.gql  conversion_rates.gql
graph-gateway/src/: agent_client.rs  attestation.rs  auth.rs  block_constraints.rs  block_resolver.rs  budgets.rs  chains.rs  client_query.rs  config.rs  errors.rs  ethereum_client.rs  exchange_rate.rs  fisherman_client.rs  gateway.rs  geoip.rs  indexer_client.rs  indexer_status.rs  indexers.rs  indexers_blocklist.rs  indexers_status.rs  indexing.rs  indexing_performance.rs  indexings_blocklist.rs  ipfs.rs  ipfs_client.rs  kafka_client.rs  l2_forwarding.rs  lib.rs  main.rs  manifest_client.rs  metrics.rs  network.rs  network_subgraph.rs  opt.rs  poi.rs  price_automation.rs  query_engine.rs  rate_limiter.rs  receipts.rs  reports.rs  (+15 more)
graph-gateway/src/auth/: common.rs  studio.rs  subscriptions.rs
graph-gateway/src/chains/: ethereum.rs  mod.rs  test.rs
graph-gateway/src/client_query/: attestation_header.rs  auth.rs  context.rs  graphql.rs  l2_forwarding.rs  legacy_auth_adapter.rs  query_id.rs  query_selector.rs  query_settings.rs  query_tracing.rs  rate_limit_settings.rs  rate_limiter.rs  require_auth.rs
graph-gateway/src/client_query/auth/: common.rs  context.rs  studio.rs  subscriptions.rs
graph-gateway/src/indexer_selection/: actor.rs  allocations.rs  block_requirements.rs  data_freshness.rs  decay.rs  economic_security.rs  indexers.rs  mod.rs  performance.rs  price_efficiency.rs  selection_factors.rs  test_utils.rs  tests.rs  utility.rs
graph-gateway/src/indexers/: cost_models.rs  indexing.rs  indexing_progress.rs  indexing_statuses.rs  public_poi.rs  query.rs  response.rs  urls.rs  version.rs
graph-gateway/src/indexers/cost_models/: client.rs
graph-gateway/src/indexers/indexing_statuses/: client.rs
graph-gateway/src/indexers/public_poi/: client.rs  query.rs
graph-gateway/src/indexers_status/: client.rs  graphql.rs  poi.rs  public_poi.rs  query.rs
graph-gateway/src/indexers_status/cost_models/: client.rs  query.rs
graph-gateway/src/indexers_status/public_poi/: client.rs  (+1 more)
graph-gateway/src/middleware/: legacy_auth.rs  request_id.rs  require_auth.rs
graph-gateway/src/network/: blocklists.rs  config.rs  entities.rs  errors.rs  indexer_addr_blocklist.rs  indexer_host_blocklist.rs  indexer_host_resolver.rs  indexer_indexing_cost_model_compiler.rs  indexer_indexing_cost_model_resolver.rs  indexer_indexing_poi_blocklist.rs  indexer_indexing_poi_resolver.rs  indexer_indexing_progress_resolver.rs  indexer_version_resolver.rs  indexers_addr_blocklist.rs  indexers_cost_model_compiler.rs  indexers_cost_model_resolver.rs  indexers_host_blocklist.rs  indexers_indexing_status_resolver.rs  indexers_poi_blocklist.rs  indexers_poi_resolver.rs  internal.rs  service.rs  snapshot.rs  subgraph.rs  subgraph_client.rs  ttl_hash_map.rs
graph-gateway/src/protobuf/: kafka.proto  mod.rs
graph-gateway/src/query_engine/: clock.rs  mod.rs  price_automation.rs  tests.rs
graph-gateway/src/subgraph_client/: client.rs  queries.rs
graph-gateway/src/utils/: double_buffer.rs
graph-gateway/tests/: it_indexers_blocklist.rs  it_indexers_cost_models.rs  it_indexers_status.rs  it_indexers_status_indexing_progress.rs  it_indexers_status_indexing_statuses.rs  it_indexers_status_public_pois.rs  it_indexers_status_version.rs  it_indexings_blocklist.rs  it_network_internal_fetch_update.rs  it_network_internal_indexer_processing.rs  it_network_subgraph_client.rs  it_subgraph_client.rs
indexer-selection/: Cargo.toml
indexer-selection/src/: actor.rs  allocations.rs  block_requirements.rs  data_freshness.rs  decay.rs  economic_security.rs  fee.rs  indexing.rs  lib.rs  performance.rs  price_efficiency.rs  reliability.rs  reputation.rs  score.rs  selection_factors.rs  simulation.rs  test.rs  test_utils.rs  tests.rs  utility.rs
indexer-selection/tools/: contrived-characteristics.csv  indexer-characteristics.py  isa-outcomes.py  reliability-response.py  reputation-response.py  simulation.py
prelude/: Cargo.toml
prelude/src/: buffer_queue.rs  bytes.rs  clock.rs  decimal.rs  double_buffer.rs  epoch_cache.rs  graphql.rs  lib.rs  shared_lookup.rs  test_utils.rs  weighted_sample.rs
(+235 files in other folders)
