[package]
edition = "2021"
name = "graph-gateway"
version = "24.2.1"

[profile.release]
lto = true
codegen-units = 1

[profile.perf]
inherits = "release"
debug = true

[dependencies]
alloy = { version = "0.6.0", features = ["contract", "signer-local"] }
anyhow = "1.0"
axum = { version = "0.7.7", default-features = false, features = [
    "json",
    "tokio",
    "http1",
] }
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "e9530de" }
custom_debug = "0.6.1"
faster-hex = "0.10.0"
futures = "0.3"
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0", default-features = false }
headers = "0.4.0"
hex = "0.4"
hickory-resolver = "0.24.0"
http = "1.1.0"
indexer-selection = { git = "https://github.com/edgeandnode/candidate-selection", rev = "c3a9ee8" }
ipnetwork = { version = "0.20.0", default-features = false }
itertools = "0.13.0"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
parking_lot = "0.12.3"
pin-project = "1.1.5"
primitive-types = "0.12.2"
prometheus = { version = "0.13", default-features = false }
prost = "0.13.1"
rand = { version = "0.8", features = ["small_rng"] }
rdkafka = { version = "0.36.2", features = ["gssapi", "tracing"] }
receipts = { git = "https://github.com/edgeandnode/receipts", rev = "e94e0f1" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "default-tls",
    "gzip",
] }
secp256k1 = { version = "0.29", default-features = false }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
serde_with = "3.8.1"
snmalloc-rs = "0.3"
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "61b47b3" }
thegraph-core = { version = "0.7.0", features = ["serde"] }
thegraph-graphql-http = { version = "0.2.1", features = [
    "http-client-reqwest",
] }
thiserror = "1.0.59"
tokio = { version = "1.38.0", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
toolshed = { git = "https://github.com/edgeandnode/toolshed", tag = "toolshed-v0.6.0" }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
test-with = { version = "0.14.0", default-features = false }
tokio-test = "0.4.4"
tower-test = "0.4.0"
