[package]
edition = "2021"
name = "graph-gateway"
version = "27.0.1"

[profile.release]
lto = true
codegen-units = 1

[profile.perf]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", default-features = false, features = [
    "json",
    "tokio",
    "http1",
] }
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "e9530de" }
custom_debug = "0.6.1"
faster-hex = "0.10.0"
futures = "0.3"
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0", default-features = false }
headers = "0.4.0"
hickory-resolver = "0.24.0"
http = "1.1.0"
indexer-selection = { git = "https://github.com/edgeandnode/candidate-selection", rev = "394d112" }
ipnetwork = { version = "0.21.0", default-features = false }
itertools = "0.14.0"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
parking_lot = "0.12.3"
pin-project = "1.1.5"
prometheus = { version = "0.13", default-features = false }
prost = "0.13.1"
rand = { version = "0.8", features = ["small_rng"] }
rdkafka = { version = "0.37.0", features = ["gssapi", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "default-tls",
    "gzip",
] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
serde_with = "3.8.1"
snmalloc-rs = "0.3"
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "1c6e29f" }
thegraph-core = { version = "0.9.2", features = [
    "alloy-contract",
    "alloy-signer-local",
    "attestation",
    "serde",
] }
thegraph-graphql-http = { version = "0.3.2", features = ["reqwest"] }
thegraph-headers = { version = "0.1.0", features = ["attestation"] }
thiserror = "2.0.2"
tokio = { version = "1.38.0", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
tokio-test = "0.4.4"
tower-test = "0.4.0"
