[package]
edition = "2024"
name = "graph-gateway"
version = "27.1.4"

[profile.release]
lto = true
codegen-units = 1

[profile.perf]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", default-features = false, features = [
    "json",
    "tokio",
    "http1",
] }
custom_debug = "0.6.1"
faster-hex = "0.10.0"
futures = "0.3"
graphql = { git = "https://github.com/edgeandnode/toolshed", tag = "graphql-v0.3.0", default-features = false }
headers = "0.4.0"
hickory-resolver = "0.25.1"
http = "1.1.0"
indexer-selection = { git = "https://github.com/edgeandnode/candidate-selection", rev = "8bc7d42" }
ipnetwork = { version = "0.21.0", default-features = false }
itertools = "0.14.0"
lazy_static = "1.4.0"
ordered-float = "5.0.0"
parking_lot = "0.12.3"
pin-project = "1.1.5"
prometheus = { version = "0.14", default-features = false }
prost = "0.13.1"
rand = "0.9.0"
rdkafka = { version = "0.37.0", features = ["gssapi", "tracing"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "default-tls",
    "gzip",
] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.116", features = ["raw_value"] }
serde_with = "3.8.1"
snmalloc-rs = "0.3"
tap_graph = "0.3.3"
thegraph-core = { version = "0.15", features = [
    "alloy-contract",
    "alloy-signer-local",
    "attestation",
    "serde",
] }
thegraph-graphql-http = { version = "0.4.0", features = ["reqwest"] }
thegraph-headers = { version = "0.3.0", features = ["attestation"] }
thiserror = "2.0.2"
tokio = { version = "1.38.0", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
tokio-test = "0.4.4"
tower-test = "0.4.0"
