[package]
edition = "2021"
name = "gateway-framework"
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
axum.workspace = true
cost-model.workspace = true
custom_debug = "0.6.1"
dashmap = "5.5.3"
ethers = "2.0.14"
eventuals = "0.6.7"
faster-hex = "0.9.0"
futures.workspace = true
gateway-common = { path = "../gateway-common" }
headers.workspace = true
hex.workspace = true
hickory-resolver = "0.24.1"
indexer-selection.workspace = true
itertools = "0.13.0"
ipnetwork = "0.20.0"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
pin-project = "1.1.5"
primitive-types.workspace = true
prometheus = "0.13.3"
prost.workspace = true
rand.workspace = true
rdkafka.workspace = true
receipts.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_with.workspace = true
siphasher.workspace = true
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "c179dfe" }
thegraph-core = { workspace = true, features = [
  "subgraph-client",
  "subscriptions",
] }
thegraph-graphql-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
toolshed.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.0"
uuid = "1.9.1"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
test-with = { version = "0.12.6", default-features = false }
tokio-test = "0.4.4"
tower-test = "0.4.0"
