[package]
edition = "2021"
name = "gateway-framework"
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
axum.workspace = true
ethers = "2.0.14"
gateway-common = { path = "../gateway-common" }
headers.workspace = true
itertools = "0.13.0"
lazy_static = "1.4.0"
ordered-float = "4.2.0"
prometheus = "0.13.3"
rand.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_with.workspace = true
thegraph-core.workspace = true
thegraph-graphql-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
toolshed.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.0"
parking_lot.workspace = true

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
test-with = { version = "0.13.0", default-features = false }
tokio-test = "0.4.4"
tower-test = "0.4.0"
