[package]
edition = "2021"
name = "graph-gateway"
version = "20.0.2"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["tokio", "http1"] }
axum-extra = "0.9.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "3ed34ca" }
custom_debug = "0.6.1"
dashmap = "5.5.3"
eventuals = "0.6.7"
faster-hex = "0.9.0"
futures = "0.3"
gateway-common = { path = "../gateway-common" }
gateway-framework = { path = "../gateway-framework" }
graphql.workspace = true
headers.workspace = true
indexer-selection.workspace = true
indoc = "2.0.5"
itertools = "0.12.1"
num-traits = "0.2.18"
ordered-float = "4.2.0"
pin-project = "1.1.5"
prometheus = { version = "0.13", default-features = false }
prost = "0.12.4"
rand.workspace = true
rdkafka = { version = "0.36.2", features = ["gssapi", "tracing"] }
reqwest.workspace = true
secp256k1.workspace = true
semver.workspace = true
serde.workspace = true
serde_json = { version = "1.0", features = ["raw_value"] }
serde_with = "3.7"
serde_yaml = "0.9"
simple-rate-limiter = "1.0"
snmalloc-rs = "0.3"
thegraph-core = { workspace = true, features = [
    "subgraph-client",
    "subscriptions",
] }
thegraph-graphql-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
toolshed.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing.workspace = true
tracing-subscriber.workspace = true
url = "2.5.0"
uuid = { version = "1.8", default-features = false, features = ["v4"] }

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.2.0"
tokio-test = "0.4.4"
tower-test = "0.4.0"
