[package]
edition = "2021"
name = "graph-gateway"
version = "21.0.0"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
anyhow.workspace = true
axum = { workspace = true, features = ["tokio", "http1"] }
cost-model.workspace = true
custom_debug = "0.6.1"
eventuals = "0.6.7"
futures.workspace = true
gateway-common = { path = "../gateway-common" }
gateway-framework = { path = "../gateway-framework" }
graphql.workspace = true
headers.workspace = true
hickory-resolver = "0.24.0"
indexer-selection.workspace = true
indoc = "2.0.5"
ipnetwork = { version = "0.20.0", default-features = false }
itertools = "0.13.0"
num-traits = "0.2.18"
ordered-float = "4.2.0"
prometheus = { version = "0.13", default-features = false }
prost.workspace = true
rand.workspace = true
rdkafka.workspace = true
reqwest.workspace = true
secp256k1.workspace = true
semver.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_with.workspace = true
simple-rate-limiter = "1.0"
snmalloc-rs = "0.3"
thegraph-core = { workspace = true, features = [
    "subgraph-client",
    "subscriptions",
] }
thegraph-graphql-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
toolshed.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing.workspace = true
url = "2.5.0"
uuid = { version = "1.8", default-features = false, features = ["v4"] }
vec1 = "1.12.0"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
test-with = { version = "0.12.6", default-features = false }
tokio-test = "0.4.4"
tower-test = "0.4.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
