[package]
edition = "2021"
name = "graph-gateway"
version = "22.0.0"

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types = "0.7.1"
anyhow.workspace = true
axum = { workspace = true, features = ["tokio", "http1"] }
cost-model.workspace = true
custom_debug = "0.6.1"
ethers = "2.0.14"
futures.workspace = true
gateway-common = { path = "../gateway-common" }
gateway-framework = { path = "../gateway-framework" }
graphql.workspace = true
headers.workspace = true
hex.workspace = true
hickory-resolver = "0.24.0"
indexer-selection.workspace = true
indoc = "2.0.5"
ipnetwork = { version = "0.20.0", default-features = false }
itertools = "0.13.0"
lazy_static = "1.4.0"
num-traits = "0.2.18"
ordered-float = "4.2.0"
parking_lot.workspace = true
primitive-types.workspace = true
prometheus = { version = "0.13", default-features = false }
prost = "0.13.1"
rand.workspace = true
rdkafka = { version = "0.36.2", features = ["gssapi", "tracing"] }
receipts = { git = "https://github.com/edgeandnode/receipts", rev = "e94e0f1" }
reqwest.workspace = true
secp256k1.workspace = true
semver.workspace = true
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_with.workspace = true
simple-rate-limiter = "1.0"
snmalloc-rs = "0.3"
tap_core = { git = "https://github.com/semiotic-ai/timeline-aggregation-protocol", rev = "c179dfe" }
thegraph-core = { workspace = true, features = ["subgraph-client"] }
thegraph-graphql-http.workspace = true
thiserror.workspace = true
tokio.workspace = true
toolshed.workspace = true
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing.workspace = true
url = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
test-with = { version = "0.13.0", default-features = false }
tokio-test = "0.4.4"
tower-test = "0.4.0"
tracing-subscriber = { workspace = true, features = ["env-filter"] }
