[package]
edition = "2021"
name = "indexer-selection"
version = "0.0.1"

[[bin]]
name = "sim"
path = "bin/sim.rs"

[dependencies]
cost-model = { git = "https://github.com/graphprotocol/agora", rev = "bb481f9" }
anyhow.workspace = true
arrayvec = "0.7"
alloy-primitives.workspace = true
eventuals.workspace = true
num-traits = "0.2"
ordered-float = "3.0"
permutation = "0.4"
prelude = { path = "../prelude" }
rand.workspace = true
rand_distr = "0.4"
receipts = { git = "ssh://git@github.com/edgeandnode/receipts.git", rev = "89a821c" }
secp256k1.workspace = true
siphasher.workspace = true
tokio.workspace = true
toolshed.workspace = true
tracing.workspace = true

[dev-dependencies]
eventuals = { workspace = true, features = ["trace"] }
