[package]
edition = "2021"
name = "indexer-selection"
version = "0.0.1"

[[bin]]
name = "sim"
path = "bin/sim.rs"

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
arrayvec = "0.7"
num-traits = "0.2"
ordered-float = "4.1"
permutation = "0.4"
prelude = { path = "../prelude" }
rand.workspace = true
rand_distr = "0.4"
siphasher.workspace = true
tokio.workspace = true
toolshed.workspace = true
tracing.workspace = true
