[package]
edition = "2021"
name = "indexer-selection"
version = "0.0.1"

[[bin]]
name = "sim"
path = "bin/sim.rs"

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
arrayvec = "0.7"
gateway-common = { path = "../gateway-common" }
num-traits = "0.2"
ordered-float = "4.2"
permutation = "0.4"
rand.workspace = true
rand_distr = "0.4"
thegraph.workspace = true
tokio.workspace = true
toolshed.workspace = true
tracing.workspace = true
