[package]
edition = "2021"
name = "prelude"
version = "0.0.1"

[dependencies]
anyhow.workspace = true
primitive-types.workspace = true
serde.workspace = true
siphasher.workspace = true
snmalloc-rs = "0.3"
tokio = { version = "1.24", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
] }
toolshed.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
