[package]
edition = "2021"
name = "prelude"
version = "0.0.1"

[dependencies]
alloy-primitives.workspace = true
anyhow.workspace = true
siphasher.workspace = true
snmalloc-rs = "0.3"
tokio = { version = "1.24", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "parking_lot",
    "json",
] }
